--- a/lib/OMG.client/html/start.html
+++ b/lib/OMG.client/html/start.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html lang="en">
+</html>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,6 +12,8 @@
   </title>
 </head>
 <body>
+  <div id="terminal">
+  </div>
   <div id="box">
     <h1 id="logo" class="omega_0">Ω
     </h1>
@@ -160,14 +164,19 @@
     <h1 id="logo" class="dot36">.
     </h1>
   </div>
-  <script id="source" src="http://localhost:3333/client.deps.js" type="text/javascript" charset="utf-8"></script>
-  <script id="source" src="http://localhost:3333/browserify.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">var winX = window.innerWidth
 ,   winY = window.innerHeight
 ,   box = document.getElementById('box');
 box.style.top = winY / 4 + 'px';
 box.style.left = winX / 2 - 117 + 'px';
 box.style.display = 'inline'
-
+</script>
+  <script id="source" src="http://localhost:3333/client.deps.js" type="text/javascript" charset="utf-8"></script>
+  <script id="source" src="http://localhost:3333/browserify.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">window.onload = function() {
+  var OMG = require('./index.js')
+  ,   omg = new OMG(window);
+  omg.init();
+}
 </script>
 </body>
