--- a/lib/OMG.client/html/index.html
+++ b/lib/OMG.client/html/index.html
@@ -7,9 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="/css/omg.css" type="text/css">
   <link rel="stylesheet" href="/css/writer.css" type="text/css">
-  <title>
-    <OMEGA>APP
-    </OMEGA>
+  <title>OMEGA APP
   </title>
   <style type="text/css"></style>
 </head>
@@ -20,162 +18,45 @@
       </h1>
       <h1 id="logo" class="dot0">.
       </h1>
-      <h1 id="logo" class="omega_1">Ω
-      </h1>
-      <h1 id="logo" class="dot1">.
-      </h1>
-      <h1 id="logo" class="omega_2">Ω
-      </h1>
-      <h1 id="logo" class="dot2">.
-      </h1>
-      <h1 id="logo" class="omega_3">Ω
-      </h1>
-      <h1 id="logo" class="dot3">.
-      </h1>
-      <h1 id="logo" class="omega_4">Ω
-      </h1>
-      <h1 id="logo" class="dot4">.
-      </h1>
-      <h1 id="logo" class="omega_5">Ω
-      </h1>
-      <h1 id="logo" class="dot5">.
-      </h1>
-      <h1 id="logo" class="omega_6">Ω
-      </h1>
-      <h1 id="logo" class="dot6">.
-      </h1>
-      <h1 id="logo" class="omega_7">Ω
-      </h1>
-      <h1 id="logo" class="dot7">.
-      </h1>
-      <h1 id="logo" class="omega_8">Ω
-      </h1>
-      <h1 id="logo" class="dot8">.
-      </h1>
-      <h1 id="logo" class="omega_9">Ω
-      </h1>
-      <h1 id="logo" class="dot9">.
-      </h1>
-      <h1 id="logo" class="omega_10">Ω
-      </h1>
-      <h1 id="logo" class="dot10">.
-      </h1>
-      <h1 id="logo" class="omega_11">Ω
-      </h1>
-      <h1 id="logo" class="dot11">.
-      </h1>
-      <h1 id="logo" class="omega_12">Ω
-      </h1>
-      <h1 id="logo" class="dot12">.
-      </h1>
-      <h1 id="logo" class="omega_13">Ω
-      </h1>
-      <h1 id="logo" class="dot13">.
-      </h1>
-      <h1 id="logo" class="omega_14">Ω
-      </h1>
-      <h1 id="logo" class="dot14">.
-      </h1>
-      <h1 id="logo" class="omega_15">Ω
-      </h1>
-      <h1 id="logo" class="dot15">.
-      </h1>
-      <h1 id="logo" class="omega_16">Ω
-      </h1>
-      <h1 id="logo" class="dot16">.
-      </h1>
-      <h1 id="logo" class="omega_17">Ω
-      </h1>
-      <h1 id="logo" class="dot17">.
-      </h1>
-      <h1 id="logo" class="omega_18">Ω
-      </h1>
-      <h1 id="logo" class="dot18">.
-      </h1>
-      <h1 id="logo" class="omega_19">Ω
-      </h1>
-      <h1 id="logo" class="dot19">.
-      </h1>
-      <h1 id="logo" class="omega_20">Ω
-      </h1>
-      <h1 id="logo" class="dot20">.
-      </h1>
-      <h1 id="logo" class="omega_21">Ω
-      </h1>
-      <h1 id="logo" class="dot21">.
-      </h1>
-      <h1 id="logo" class="omega_22">Ω
-      </h1>
-      <h1 id="logo" class="dot22">.
-      </h1>
-      <h1 id="logo" class="omega_23">Ω
-      </h1>
-      <h1 id="logo" class="dot23">.
-      </h1>
-      <h1 id="logo" class="omega_24">Ω
-      </h1>
-      <h1 id="logo" class="dot24">.
-      </h1>
-      <h1 id="logo" class="omega_25">Ω
-      </h1>
-      <h1 id="logo" class="dot25">.
-      </h1>
-      <h1 id="logo" class="omega_26">Ω
-      </h1>
-      <h1 id="logo" class="dot26">.
-      </h1>
-      <h1 id="logo" class="omega_27">Ω
-      </h1>
-      <h1 id="logo" class="dot27">.
-      </h1>
-      <h1 id="logo" class="omega_28">Ω
-      </h1>
-      <h1 id="logo" class="dot28">.
-      </h1>
-      <h1 id="logo" class="omega_29">Ω
-      </h1>
-      <h1 id="logo" class="dot29">.
-      </h1>
-      <h1 id="logo" class="omega_30">Ω
-      </h1>
-      <h1 id="logo" class="dot30">.
-      </h1>
-      <h1 id="logo" class="omega_31">Ω
-      </h1>
-      <h1 id="logo" class="dot31">.
-      </h1>
-      <h1 id="logo" class="omega_32">Ω
-      </h1>
-      <h1 id="logo" class="dot32">.
-      </h1>
-      <h1 id="logo" class="omega_33">Ω
-      </h1>
-      <h1 id="logo" class="dot33">.
-      </h1>
-      <h1 id="logo" class="omega_34">Ω
-      </h1>
-      <h1 id="logo" class="dot34">.
-      </h1>
-      <h1 id="logo" class="omega_35">Ω
-      </h1>
-      <h1 id="logo" class="dot35">.
-      </h1>
-      <h1 id="logo" class="omega_36">Ω
-      </h1>
-      <h1 id="logo" class="dot36">.
-      </h1>
     </div>
   </div>
   <div id="options">
-    <div id="menuOptions"><a href="#" id="writer" class="menuButton">Publish</a><a href="#" id="writer" class="menuButton">Aggregate</a><a href="#" id="writer" class="menuButton">Write</a><a href="#" id="writer" class="menuButton">Visualize</a><a href="#" id="writer" class="menuButton">Media & Files</a><a href="#" id="writer" class="menuButton">Profile</a><a href="#" id="writer" class="menuButton">Configure</a>
+    <div class="icon publish">
+      <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
+      </object>
+      <div class="gloss">
+      </div>
+    </div>
+    <div class="icon satellite">
+      <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
+      </object>
+      <div class="gloss">
+      </div>
+    </div>
+    <div class="icon satellite">
+      <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
+      </object>
+      <div class="gloss">
+      </div>
+    </div>
+    <div class="icon satellite">
+      <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
+      </object>
+      <div class="gloss">
+      </div>
     </div>
   </div>
   <script type="text/javascript">var winX = window.innerWidth
 ,   winY = window.innerHeight
-,   box = document.getElementById('box');
-box.style.top = winY / 6.67 + 'px';
-box.style.left = .24 * winX + 'px';
-box.style.display = 'inline'
+,   menuButtons = document.getElementsByClassName('menuButton')
+,		box = document.getElementById('box')
+,   mH = (winY - 20) - menuButtons.item(0).style.height * 8;
+//box.style.display = 'block';
+function domRay(x){
+  console.log(mH)
+  menuButtons.item(x).style.height = (winY) / 8 + 1 + 'px'
+  menuButtons.item(x).children[0].style['line-height'] = (winY) / 8 + 'px'
+};for(x = 0;x < menuButtons.length; ++x) domRay(x)
 </script>
   <script id="source" src="http://localhost:3333/client.deps.js" type="text/javascript" charset="utf-8"></script>
   <script id="source" src="http://localhost:3333/browserify.js" type="text/javascript" charset="utf-8"></script>
