--- a/lib/OMG.client/html/index.html
+++ b/lib/OMG.client/html/index.html
@@ -27,19 +27,19 @@
       <div class="gloss">
       </div>
     </div>
-    <div class="icon satellite">
+    <div class="icon publish">
       <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
       </object>
       <div class="gloss">
       </div>
     </div>
-    <div class="icon satellite">
+    <div class="icon publish">
       <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
       </object>
       <div class="gloss">
       </div>
     </div>
-    <div class="icon satellite">
+    <div class="icon publish">
       <object style="zoom:5" id="icon_publish" data="/images/noun_project_1316.svg" type="image/svg+xml">
       </object>
       <div class="gloss">
