updated namespaces and fixed bugs in writer

--- a/lib/OMG.client/html/index.html
+++ b/lib/OMG.client/html/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="/css/omg.css" type="text/css">
+  <link rel="stylesheet" href="/css/writer.css" type="text/css">
   <title>OMEGA APP
   </title>
   <style type="text/css"></style>
