--- a/lib/OMG.client/html/frontis.html
+++ b/lib/OMG.client/html/frontis.html
@@ -4,7 +4,7 @@
 <div id="options">
   <div class="icon publish">
     <div class="hovr">
-      <div style="zoom:1" id="icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <div style="zoom:1" class="frontisIcon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="100px" height="100px" viewBox="-3.637 -8.005 83.496 100" enable-background="new -3.637 -8.005 83.496 100"
 	 xml:space="preserve" stroke="rgba(0,0,0,1)" stroke-width="0" fill="rgba(0,0,0,1)" style="cursor:pointer">
 <path d="M8.343-4.093C4.064,0.063,1.861,5.687,1.861,11.676c0,5.867,2.203,11.493,6.481,15.772l-3.668,3.789
@@ -31,7 +31,7 @@
   </div>
   <div class="icon channel">
     <div onclick="omg.draw()" class="hovr">
-      <div style="zoom:1" id="icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <div style="zoom:1" class="frontisIcon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	width="100px" height="100px" viewBox="-3.637 -8.005 83.496 100" enable-background="new -3.637 -8.005 83.496 100"
 	 xml:space="preserve" stroke="rgba(0,0,0,1)" stroke-width="0" fill="rgba(0,0,0,1)" style="cursor:pointer">
 <path d="M87.942,42.574c0,27.887-22.035,50.078-49.922,50.078c-27.738,0-50.078-22.19-50.078-50.078
@@ -63,7 +63,7 @@
   </div>
   <div class="icon draftsman">
     <div onclick="omg.writer.create()" class="hovr">
-      <div style="zoom:1" id="icon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <div style="zoom:1" class="frontisIcon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="100px" height="100px" viewBox="-3.637 -8.005 83.496 100" enable-background="new -3.637 -8.005 83.496 100"
  	 xml:space="preserve" stroke="rgba(0,0,0,1)" stroke-width="0" fill="rgba(0,0,0,1)" style="cursor:pointer">
 <path d="M14.13,86.104l-25.307,6.175l-0.455-0.448l6.63-25.313L54.35,7.465c1.055-0.3,3.618-1.054,7.229-0.3l-62.964,62.97
@@ -79,7 +79,7 @@
   </div>
   <div data-auth="false" class="icon profile">
     <div onclick="omg.frontis()" class="hovr">
-      <div style="zoom:1" id="icon"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <div style="zoom:1" class="frontisIcon"><svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="100px" height="100px" viewBox="0 0 100 76.434" enable-background="new 0 0 100 76.434" xml:space="preserve" style="cursor:pointer">
 <path d="M98.574,67.99C96.458,57.071,67.338,58.232,60.32,49.68c-1.48-1.805-1.48-1.805-0.488-8.507
 	c1.694-7.502,3.229-2.846,5.651-17.809C67.517,10.798,63.177,0,50,0S32.483,10.798,34.517,23.364
