--- a/lib/parser/rat.html
+++ b/lib/parser/rat.html
@@ -1,9 +1,10 @@
-  <div id='content'>
-    <p id='article'>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts — <a href="#">it is</a> an almost unorthographic life. One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. <img src="" height="100px" width="100px"></img>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, b, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts — it is an almost unorthographic life. </p>
-    <iframe width="50%" id="abc" class="audio" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F37058250&amp;auto_play=false&amp;show_artwork=false&amp;color=ff7700"></iframe>
+  <div id='layout' class='fixed'>
+    <div id='template' class='book'>
+    <p class='media'>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts — <a href="#">it is</a> an almost unorthographic life. One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. <img src="" height="100px" width="100px"></img>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, b, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts — it is an almost unorthographic life. </p>
+    <iframe id="abc" class="media audio w100" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F37058250&amp;auto_play=false&amp;show_artwork=false&amp;color=ff7700"></iframe>
     <blockquote>Pointing has no control about the blind texts — it is an almost unorthographic life</blockquote>
     <p id=''>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts — it is an almost unorthographic life. One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, b, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts — it is an almost unorthographic life. </p>
-<div class="image">
+<div class="media image w50 right">
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
  width="100px" height="100px" viewBox="-3.637 -8.005 83.496 100" enable-background="new -3.637 -8.005 83.496 100"
  xml:space="preserve" stroke="rgba(0,0,0,1)" stroke-width="0" fill="rgba(0,0,0,1)" style="cursor:pointer">
@@ -24,9 +25,10 @@ c4.278-4.156,6.477-9.779,6.354-15.769c0.123-5.87-2.075-11.614-6.354-15.895l3.664
 c-0.123,6.723-2.444,13.691-8.192,19.192L67.879,27.691z"/>
 </svg>
 </div>
-	    <iframe class="youtube video" width="560" height="315" src="http://www.youtube.com/embed/i3Jv9fNPjgk" frameborder="0" allowfullscreen></iframe>
+	    <iframe class="media video youtube w65 left" src="http://www.youtube.com/embed/i3Jv9fNPjgk" frameborder="0" allowfullscreen></iframe>
 </div>
 
 	<div id='boundlessNutshell'>
 	  <p id='text'>Oxmox advised her not to do so, because there were thousands of bad Commas, wild.</p>
+	  </div>
 	</div>
