--- a/lib/OMG.client/html/johnny.html
+++ b/lib/OMG.client/html/johnny.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-</html>
+<!doctype html>
 <head>
   <title>Johnny Honestly</title>
   <meta name="google" value="notranslate">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<script type='text/javascript' src='http://localhost:3333/html/client.deps'></script>
-	<style>
 
+	<link rel='stylesheet' href='../css/ui-lightness/jqueryui.ui.css'>
+
+	<style>
 	body, div, h1, h2, h3, h4, a, img, audio, video, blockquote, svg{
 	  margin: 0;
 	  padding: 0;
@@ -41,14 +40,15 @@
   
   #shape {
     position: absolute;
-    top: 0;
+    top: 200px;
+		left: 200px;
     margin: 0 auto;
     -webkit-transform-style: preserve-3d;    
   }
   
   .plane {
-    position: relative;
-    display:inline-block;
+    position: absolute;
+    display:block;
     height: 50px;
     width: 50px;
     border: 1px solid white;
@@ -71,24 +71,41 @@
        to   { -webkit-transform: rotateY(-360deg); }
      }
   .ring > .one {
-        -webkit-transform: translateZ(200px) ;
+        -webkit-transform: skewY(-30deg) translateZ(200px) ;
       }
 
       .ring > .two {
-        -webkit-transform: rotateY(0deg) translateZ(200px);
+        -webkit-transform: skewY(-30deg) skewX(45deg) translateX(-30px) translateY(60px);
       }
 
       .ring > .three {
-        -webkit-transform: rotateY(0deg) translateZ(200px);
+        -webkit-transform: skewY(-30deg) skewX(45deg) translateX(30px) translateY(-60px);
       }
 
       .ring > .four {
-        -webkit-transform: rotateY(0deg) translateZ(200px);
+        -webkit-transform: skewY(-30deg) translateZ(400px) rotateY(90) ;
       }
+			.slider {
+				position: absolute;
+				background: #333;
+				height: 400px;
+				right: 30px;
+			}
+			.boxx {
+				width: 400px;
+				height: 400px;
+				position: absolute;
+				background: pink;
+				top: 100px;
+				right:100px;
+			}
+			.skoo { -webkit-tranform: skewY(90deg)}
 	</style>
 </head>
 <body>
 <div class='terminal'>
+	<div class='boxx'></div>
+	<div class='slider'></div>
   <div id="stage">
         <div id="shape" class="ring backfaces">
           <div class="plane ring  one"></div>
@@ -97,10 +114,7 @@
           <div class="plane ring four"></div>
         </div>
       </div>
-  </div>
 </div>
-<script type='text/javascript'>
-  $('.navlink').css('font-size', window.innerWidth / 300 +'em')
-</script>
 </body>
+<script type='text/javascript' src='http://localhost:3333/client.deps.js'></script>
 </html>
