--- a/lib/OMG.client/html/draw.html
+++ b/lib/OMG.client/html/draw.html
@@ -1,23 +1,25 @@
 
-<canvas id="canvas" resize="resize" style="background:white">
+<canvas id="canvas" resize="resize" style="background:-webkit-radial-gradient(50% 50%, rgba(248,249,243,0.75), rgba(93,93,93,0.60))">
 </canvas>
-<div id="options"><a href="javascript:gg.draw.init.apply(gg);">draw
-    <ul>
-      <li><a href="#">Pen</a>
-      </li>
-    </ul></a><a href="#">shapes
-    <ul>
-      <li><a href="javascript:gg.shapes.line.apply(gg)">line</a>
-      </li>
-      <li><a href="javascript:gg.shapes.arc.apply(gg)">Arc</a>
-      </li>
-      <li><a href="javascript:gg.shapes.polygon.apply(gg)">polygons</a>
-      </li>
-      <li><a href="javascript:gg.shapes.circle.apply(gg)">circles</a>
-      </li>
-      <li><a href="javascript:gg.shapes.star.apply(gg)">star-burst</a>
-      </li>
-      <li><a href="javascript:gg.shapes.burst.apply(gg)">burbles</a>
-      </li>
-    </ul></a><a href="javascript:gg.txt.init.apply(gg)">txt</a><br/><a href="javascript:gg.colorPicker.init.apply(gg);">pallette</a><br/><a href="#">select</a><br/><a href="#">undo</a><br/><a href="#">redo</a>
-</div>
+<ul id="options">
+  <li><a href="javascript:omg.gg.draw.init.apply(omg.gg)">Draw</a>
+  </li>
+  <li><a href="javascript:omg.gg.shapes.line.apply(omg.gg)">Line</a>
+  </li>
+  <li><a href="javascript:omg.gg.shapes.arc.apply(omg.gg)">Arc</a>
+  </li>
+  <li><a href="javascript:omg.gg.shapes.polygon.apply(omg.gg)">Polygon</a>
+  </li>
+  <li><a href="javascript:omg.gg.shapes.circle.apply(omg.gg)">Circle</a>
+  </li>
+  <li><a href="javascript:omg.gg.shapes.star.apply(omg.gg)">Starburst</a>
+  </li>
+  <li><a href="javascript:omg.gg.shapes.burst.apply(omg.gg)">Burble</a>
+  </li>
+  <li><a href="javascript:omg.gg.txt.init.apply(omg.gg)">Text</a>
+  </li>
+  <li><a href="javascript:omg.gg.colorPicker.init.apply(omg.gg)">Palette</a>
+  </li>
+  <li><a href="javascript:omg.gg.xyRangeFinder.apply(omg.gg)">XY Range</a>
+  </li>
+</ul>
