--- a/lib/OMG.client/html/index.html
+++ b/lib/OMG.client/html/index.html
@@ -14,7 +14,7 @@
 </div>
 <div id="options">
   <div class="icon publish">
-    <div class="hovr">
+    <div onclick="omg.playground()" class="hovr">
       <div style="zoom:1" class="frontisIcon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="100px" height="100px" viewBox="-3.637 -8.005 83.496 100" enable-background="new -3.637 -8.005 83.496 100"
 	 xml:space="preserve" stroke="rgba(0,0,0,1)" stroke-width="0" fill="rgba(0,0,0,1)" style="cursor:pointer">
@@ -109,10 +109,10 @@
 </script>
   <script id="source" src="http://localhost:3333/client.deps.js" type="text/javascript" charset="utf-8"></script>
   <script id="source" src="http://localhost:3333/browserify.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript">window.onload = function() {
+  <script type="text/javascript">$(document).ready(function() {
   var OMG = require('./index.js')
   ,   omg = new OMG(window);
   omg.init();
-}
+})
 </script>
 </body>
