massive addiitons, playground enhancements, css profiling'

--- a/lib/OMG.client/html/frontis.html
+++ b/lib/OMG.client/html/frontis.html
@@ -3,7 +3,7 @@
 </div>
 <div id="options">
   <div class="icon publish">
-    <div onclick="omg.playground()" class="hovr">
+    <div onclick="omg.playground.init()" class="hovr">
       <div style="zoom:1" class="frontisIcon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="100px" height="100px" viewBox="-3.637 -8.005 83.496 100" enable-background="new -3.637 -8.005 83.496 100"
 	 xml:space="preserve" stroke="rgba(0,0,0,1)" stroke-width="0" fill="rgba(0,0,0,1)" style="cursor:pointer">
