--- a/lib/OMG.client/html/playground.html
+++ b/lib/OMG.client/html/playground.html
@@ -16,30 +16,40 @@
     <option value="wrap">wrap
     </option>
   </select>
-  <select id="elem" class="selector">
-    <option value="div" class="elemHTML">div
-    </option>
-    <option value="a" class="elemHTML">a
-    </option>
-    <option value="p" class="elemHTML">p
-    </option>
-    <option value="img" class="elemHTML">img
-    </option>
-    <option value="audio" class="elemHTML">audio
-    </option>
-    <option value="video" class="elemHTML">video
-    </option>
-    <option value="canvas" class="elemHTML">canvas
-    </option>
-    <option value="header" class="elemHTML">header
-    </option>
-    <option value="iframe" class="elemHTML">iframe
-    </option>
-  </select>
-  <button type="button" id="createHTMLelem" class="selector">press
+  <button type="button" data-event="click" data-type="div" class="selector createHTMLelem">div
   </button>
-  <input type="range" min="-100" max="200" value="40" onchange="" id="oy" class="ranger"/>
-  <div class=""><canvas class='xyRangeCanvas' id='xyRangeCanvas' resize></canvas>
-
-  </div>
+  <button type="button" data-event="click" data-type="a" class="selector createHTMLelem">a
+  </button>
+  <button type="button" data-event="click" data-type="p" class="selector createHTMLelem">p
+  </button>
+  <button type="button" data-event="click" data-type="blockquote" class="selector createHTMLelem">blockquote
+  </button>
+  <button type="button" data-event="click" data-type="textarea" class="selector createHTMLelem">textarea
+  </button>
+  <button type="button" data-event="click" data-type="ul" class="selector createHTMLelem">ul
+  </button>
+  <button type="button" data-event="click" data-type="li" class="selector createHTMLelem">li
+  </button>
+  <button type="button" data-event="click" data-type="ol" class="selector createHTMLelem">ol
+  </button>
+  <button type="button" data-event="click" data-type="form" class="selector createHTMLelem">form
+  </button>
+  <button type="button" data-event="click" data-type="input" class="selector createHTMLelem">input
+  </button>
+  <button type="button" data-event="click" data-type="button" class="selector createHTMLelem">button
+  </button>
+  <button type="button" data-event="click" data-type="img" class="selector createHTMLelem">img
+  </button>
+  <button type="button" data-event="click" data-type="audio" class="selector createHTMLelem">audio
+  </button>
+  <button type="button" data-event="click" data-type="video" class="selector createHTMLelem">video
+  </button>
+  <button type="button" data-event="click" data-type="canvas" class="selector createHTMLelem">canvas
+  </button>
+  <button type="button" data-event="click" data-type="header" class="selector createHTMLelem">header
+  </button>
+  <button type="button" data-event="click" data-type="iframe" class="selector createHTMLelem">iframe
+  </button>
+  <input type="file" id="mediaElemSrc" class="selector"/>
 </div>
+<input type="range" min="-100" max="200" value="40" onchange="" id="oy" class="ranger"/>
