--- a/lib/OMG.client/html/simon.scats.html
+++ b/lib/OMG.client/html/simon.scats.html
@@ -5,75 +5,109 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<link rel='stylesheet' href='../css/ui-lightness/jqueryui.ui.css'>
-
-	<style>
+	<style id='styles'>
 	body, div, h1, h2, h3, h4, a, img, audio, video, blockquote, svg, canvas{
 	  margin: 0;
 	  padding: 0;
 	}
+	html, body {height: 100%;}
 	body {
 		font-family: Times;
 		width: 100%;
-		height: 100%;
 		font-size:62.5%;
 		color: hsla(210, 80%, 30%, 1);
-		background-image: -webkit-radial-gradient(center, hsla(110,50%,50%,.65), hsla(110,80%,30%,1));
-    
+		background-image: -webkit-radial-gradient(60% 60%,#aaa, #333);
+		background-image: -moz-linear-gradient(right, #aaa 40%, #333 100%);
+		display: box; display: flexbox;
+    	box-align: center; flex-align: center;
+    	box-pack: center; flex-pack: center;
+    overflow:hidden;
 	}
-	
+	p {
+	  color: hotpink;
+	  font-size:150%;
+	  padding:  0 2ex 0 0;
+	  text-shadow: 1px 1px 0 #333;
+	  
+	}
 	a{
 	  text-decoration:none;
 	  color: hsla(210, 80%, 50%, 1);
 	}
 	
 	.game {
-		width:600px;
-		height:600px;
-		background: #333;
+	  position:fixed;
+	  left:8%;
+	  top:10%;
+		width:67%;
+		height:75%;
+	}
+	.panel {
+	  position:fixed;
+	  top:10%;
+	  width:25%;
+	  height:50%;
+	  right:-10px;
 	}
 	.pad {
-		width:50%;
-		height:50%;
-		background:blue;
+		width:33%;
+		height:33%;
+		background:#eee;
 		float:left;
 	}
 	.button {
+	  opacity:.5;
 		width:100%;
 		height:100%;
 		border:2px solid black;
 	}
+	
 	.button:hover {
 		cursor:pointer;
 	}
-	.red {background:red;border-top-left-radius:0px}
-	.green {background:green;border-top-right-radius:0px}
-	.blue {background:blue;border-bottom-left-radius:0px}
-	.yellow {background:yellow;border-bottom-right-radius:0px}
+
 	.glowing {
-		background-image: -webkit-radial-gradient(center, rgba(255,255,255,.5), rgba(0,0,0,.5));
+	  opacity:1;
+	  box-shadow: inset 0 0 7px #333;
 	}
 	.startBtn {
-		zoom:2;
+	}
+	.hide {
+	  display:none;
+	}
+	h1 {
+	  color:hotpink;
+	  text-shadow: 1px 1px 0 #333;
+	}
+	.title {
+	  color:rgb(245, 30, 245);
+	}
+	.newGame {
+	  font-size:70px;
+	  position:absolute;
+	  top:0;
+	  left:67px;
+	  z-index:2;
 	}
 	</style>
 </head>
 <body>
-	<div class='game'>
-		<div class='pad'>
-			<div class='red button' id='red'></div>
-		</div>
-		<div class='pad'>
-			<div class='green button' id='green'></div>
-		</div>
-		<div class='pad'>
-			<div class='blue button' id='blue'></div>
-		</div>
-		<div class='pad'>
-			<div class='yellow button' id='yellow'></div>
-		</div>
+  <audio class='hide' id='burp' src='../audio/burp_x.wav' controls='false'></audio>
+	<div class='game' id='game'>
+	  <span class='newGame hide' id='newGame'><h1>NEW GAME</h1></span>
 	</div>
-	<button class='startBtn' id='startBtn'>start</button>
+	<div class='panel'>
+	  <h1 class='title'>SIMON SCATS</h1>
+	 <h1 id='score'>Score: 0</h1>
+   	<br />
+   	<button class='startBtn' id='startBtn'>start</button>
+   	<p>
+   	  Featuring Ella Fitzgerald.
+   	</p>
+   	<p>
+   	  To play it like a sampler, don't press start.
+   	</p>
+	</div>
 </body>
 <script type='text/javascript' src='http://localhost:3333/client.deps.js'></script>
 <script type='text/javascript' src='http://localhost:3333/js/simon.scats.js'></script>
